--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
+    "@types/testing-library__jest-dom": "^5.14.2",
+    "@types/testing-library__user-event": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "5.10.0",
     "@typescript-eslint/parser": "5.10.0",
     "@upleveled/eslint-config-upleveled": "2.3.0",
